--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Restaurant Name. All rights reserved.</p>
+        <p>&copy; 2024 Apni Rasoi. All rights reserved.</p>
     </footer>
 </body>
 </html>
