--- a/menu.html
+++ b/menu.html
@@ -38,7 +38,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Restaurant Name. All rights reserved.</p>
+        <p>&copy; 2024 Apni Rasoi. All rights reserved.</p>
     </footer>
 </body>
 </html>
