--- a/order.html
+++ b/order.html
@@ -46,7 +46,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Restaurant Name. All rights reserved.</p>
+        <p>&copy; 2024 Apni Rasoi. All rights reserved.</p>
     </footer>
 </body>
 </html>
